added card for cities with search button

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,3 +15,9 @@
     flex-wrap: wrap;
     flex-direction: row;
 }
+
+.button-div {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
