--- a/assets/style.css
+++ b/assets/style.css
@@ -31,5 +31,14 @@
 }
 
 .custom-jumbotron {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    flex-wrap: wrap;
+    height: 40vh;
     border: 3px solid yellow !important;
+}
+
+.custom-div {
+    border: 3px solid purple;
 }
