--- a/assets/style.css
+++ b/assets/style.css
@@ -51,5 +51,10 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    
+
+}
+
+.cities-list {
+    font-weight: 600;
+    font-size: 15px;
 }
