--- a/assets/style.css
+++ b/assets/style.css
@@ -26,6 +26,7 @@
     font-size: 15px;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .cities {
@@ -124,4 +125,7 @@
     .wrapper {
         background-color: black;
     }    
+    .city-name {
+        font-size: 19px;
+    }
 }
